# gnmi

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  compile-protos-docker.sh  compile_protos.sh  gnmi_deps.bzl  gnmi_go_deps.bzl  gnmi_infra_deps.bzl  go.mod  go.sum  regenerate-files.sh  run.sh
.bcr/: README.md  metadata.template.json  presubmit.yml
.github/: renovate.json
.github/workflows/: ci-cpp-build-gnmi.yml  go.yml  linter.yml  test.yml
bazel/: BUILD.bazel  cc_grpc_library.bzl  generate_cc.bzl  protobuf.bzl  tools.go
cache/: BUILD.bazel  cache.go  cache_test.go
cli/: BUILD.bazel  cli.go  cli_test.go
client/: BUILD.bazel  cache.go  cache_test.go  client.go  client_test.go  notification.go  query.go  reconnect.go  reconnect_test.go  register.go  values.go
client/fake/: BUILD.bazel  fake.go  fake_test.go
client/flags/: BUILD.bazel  flags_test.go  intmap.go  stringlist.go  stringmap.go
client/gnmi/: BUILD.bazel  client.go  client_test.go  credentials.go
client/grpc/: lookup.go  lookup_test.go
client/grpcutil/: lookup.go  lookup_test.go
client/openconfig/: client.go  client_test.go
cmd/gnmi_cli/: BUILD.bazel  gnmi_cli.go  gnmi_cli_test.go
cmd/gnmi_collector/: BUILD.bazel  gnmi_collector.go  gnmi_collector_test.go
cmd/gnmi_collector/docker/: Dockerfile  README.md  build.sh  run.sh  supervisord.conf
cmd/gnmi_collector/docker/config/: cert.pem  example.cfg  key.pem
cmd/gnmi_collector/testdata/: bad.cfg  bad.crt  bad.key  good.cfg  good.crt  good.key  good_tunnel.cfg  unparseable.cfg
coalesce/: BUILD.bazel  coalesce.go  coalesce_test.go
collector/: BUILD.bazel  collector.go  collector_test.go
commons-networking-parent/: .classpath  .project  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pom.xml
commons-networking-parent/commons-networking/: .project  README.md  pom.xml
commons-networking-parent/commons-networking/src/main/java/com/cisco/commons/networking/: GNMIUtils.java
commons-networking-parent/commons-networking/src/test/java/com/cisco/commons/networking/: GNMIUtilsTest.java
commons-networking-parent/networking-api/: .classpath  .gitignore  .project  README.md  pom.xml
commons-networking-parent/networking-api/proto/: gnmi.proto  gnmi_ext.proto
connection/: BUILD.bazel  connection.go  connection_test.go
ctree/: BUILD.bazel  tree.go  tree_test.go
docs/: gnmignoisshdialoutgrpctunnel.md
errdiff/: BUILD.bazel  errdiff.go  errdiff_test.go
errlist/: BUILD.bazel  errlist.go  errlist_test.go
latency/: BUILD.bazel  latency.go  latency_test.go
manager/: BUILD.bazel  manager.go  manager_test.go  meta.go  meta_test.go
match/: BUILD.bazel  match.go  match_test.go
metadata/: BUILD.bazel  metadata.go  metadata_test.go
metadata/yang/: gnmi-collector-metadata.yang
path/: BUILD.bazel  path.go  path_test.go
proto/collector/: BUILD.bazel  collector.pb.go  collector.proto  collector_grpc.pb.go  collector_pb2.py  collector_pb2_grpc.py
proto/gnmi/: BUILD  BUILD.bazel  gnmi.pb.go  gnmi.proto  gnmi_grpc.pb.go  gnmi_pb2.py  gnmi_pb2_grpc.py
proto/gnmi_ext/: BUILD  BUILD.bazel  gnmi_ext.pb.go  gnmi_ext.proto  gnmi_ext_pb2.py  gnmi_ext_pb2_grpc.py
subscribe/: BUILD.bazel  stats.go  subscribe.go  subscribe_test.go
testing/fake/gnmi/: BUILD.bazel  agent.go  client.go  gnmi_test.go
testing/fake/gnmi/cmd/: README.md  server.go
testing/fake/gnmi/cmd/fake_server/: BUILD.bazel  README.md  config.pb.txt  example-config.pb.txt  server.go
testing/fake/gnmi/cmd/gen_fake_config/: BUILD.bazel  gen_config.go
testing/fake/openconfig/: agent.go  client.go  openconfig_test.go
testing/fake/proto/: BUILD.bazel  fake.pb.go  fake.proto  fake_grpc.pb.go  fake_pb2.py  fake_pb2_grpc.py
testing/fake/queue/: BUILD.bazel  fixed_queue.go  queue.go  queue_test.go
testing/fake/testing/grpc/config/: BUILD.bazel  config_test.go  server_option.go
testing/fake/testing/tls/: BUILD.bazel  tls.go  tls_test.go
tunnel/: dialer.go  tunnel.go
tunnel/dialer/: dialer.go  dialer_test.go
unimplemented/: unimplemented.go
value/: BUILD.bazel  value.go  value_test.go
watch/: BUILD.bazel  watch.go
