load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "coalesce",
    srcs = ["coalesce.go"],
    importpath = "github.com/openconfig/gnmi/coalesce",
    visibility = ["//visibility:public"],
)

go_test(
    name = "coalesce_test",
    srcs = ["coalesce_test.go"],
    embed = [":coalesce"],
)
