load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "connection",
    srcs = ["connection.go"],
    importpath = "github.com/openconfig/gnmi/connection",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_test(
    name = "connection_test",
    srcs = ["connection_test.go"],
    embed = [":connection"],
    deps = [
        "//proto/gnmi",
        "@org_golang_google_grpc//:grpc",
    ],
)
