load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "latency",
    srcs = ["latency.go"],
    importpath = "github.com/openconfig/gnmi/latency",
    visibility = ["//visibility:public"],
)

go_test(
    name = "latency_test",
    srcs = ["latency_test.go"],
    embed = [":latency"],
    deps = [
        "//errdiff",
        "@com_github_google_go_cmp//cmp",
    ],
)
