load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "match",
    srcs = ["match.go"],
    importpath = "github.com/openconfig/gnmi/match",
    visibility = ["//visibility:public"],
)

go_test(
    name = "match_test",
    srcs = ["match_test.go"],
    embed = [":match"],
)
