load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "path",
    srcs = ["path.go"],
    importpath = "github.com/openconfig/gnmi/path",
    visibility = ["//visibility:public"],
    deps = ["//proto/gnmi"],
)

go_test(
    name = "path_test",
    srcs = ["path_test.go"],
    embed = [":path"],
    deps = [
        "//errdiff",
        "//proto/gnmi",
    ],
)
