load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fake",
    srcs = ["fake.go"],
    importpath = "github.com/openconfig/gnmi/client/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//client",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "fake_test",
    srcs = ["fake_test.go"],
    embed = [":fake"],
    deps = ["//client"],
)
