load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gnmi",
    srcs = [
        "client.go",
        "credentials.go",
    ],
    importpath = "github.com/openconfig/gnmi/client/gnmi",
    visibility = ["//visibility:public"],
    deps = [
        "//client",
        "//path",
        "//proto/gnmi",
        "//value",
        "@com_github_golang_glog//:glog",
        "@com_github_openconfig_ygot//ygot",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_net//context",
    ],
)

go_test(
    name = "gnmi_test",
    srcs = ["client_test.go"],
    embed = [":gnmi"],
    deps = [
        "//client",
        "//proto/gnmi",
        "//testing/fake/gnmi",
        "//testing/fake/proto",
        "//testing/fake/testing/grpc/config",
        "//value",
        "@com_github_kylelemons_godebug//pretty",
        "@com_github_openconfig_ygot//ygot",
        "@org_golang_google_grpc//:grpc",
    ],
)
