# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Supporting infrastructure for implementing and testing PINS.
#

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "gnmi_ext_proto",
    srcs = ["gnmi_ext.proto"],
    import_prefix = "github.com/openconfig/gnmi",
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

cc_proto_library(
    name = "gnmi_ext_cc_proto",
    deps = [":gnmi_ext_proto"],
)

go_proto_library(
    name = "gnmi_ext_go_proto",
    importpath = "github.com/openconfig/gnmi_ext",
    proto = ":gnmi_ext_proto",
)

go_library(
    name = "gnmi_ext",
    embed = [":gnmi_ext_go_proto"],
    importpath = "github.com/openconfig/gnmi_ext",
)
