#Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "fake_proto",
    srcs = ["fake.proto"],
    import_prefix = "github.com/openconfig/gnmi",
    deps = [
        "//proto/gnmi:gnmi_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

cc_proto_library(
    name = "fake_cc_proto",
    deps = [":fake_proto"],
)

cc_grpc_library(
    name = "fake_cc_grpc_proto",
    srcs = [":fake_proto"],
    grpc_only = True,
    deps = [":fake_cc_proto"],
)

go_proto_library(
    name = "fake_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnmi/testing/fake/proto",
    proto = ":fake_proto",
    deps = [
        "//proto/gnmi",
    ],
)

go_library(
    name = "proto",
    embed = [":fake_go_proto"],
    importpath = "github.com/openconfig/gnmi/testing/fake/proto",
)
